--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
@@ -61,9 +63,11 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,js,css,md}": [
-      "prettier --write",
-      "git add"
+    "*.{ts,tsx,js}": [
+      "eslint --fix"
+    ],
+    "*.{css}": [
+      "stylelint --write"
     ]
   }
 }
