--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint src pages --ext .ts,.tsx",
     "lint:fix": "yarn lint -- --fix",
+    "lint:styles": "stylelint  \"{pages,src}/**/*.scss\"",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -34,6 +35,10 @@
     "react-focus-on": "^3.5.1",
     "react-imported-component": "^6.4.1",
     "sass": "^1.32.8",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0",
     "use-callback-ref": "^1.2.5",
     "vercel": "^21.3.3",
     "web3": "^1.3.5",
