--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src pages --ext .ts,.tsx",
     "lint:fix": "yarn lint -- --fix",
     "lint:styles": "stylelint  \"{pages,src}/**/*.scss\"",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@ethersproject/providers": "^5.1.0",
@@ -45,10 +47,16 @@
     "web3-eth-personal": "^1.3.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.2",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
