--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.1.0",
+    "@storybook/preset-scss": "^1.0.3",
     "@walletconnect/client": "^1.4.1",
     "@walletconnect/qrcode-modal": "^1.4.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.9",
+    "babel-plugin-storybook-csf-title": "^2.0.0",
     "bn.js": "^5.2.0",
     "classnames": "^2.3.1",
     "eslint-plugin-rulesdir": "^0.2.0",
@@ -29,6 +31,7 @@
     "next-images": "^1.7.0",
     "next-videos": "^1.4.0",
     "patch-package": "^6.4.7",
+    "pkg-up": "^3.1.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
@@ -37,6 +40,7 @@
     "react-focus-on": "^3.5.1",
     "react-imported-component": "^6.4.1",
     "sass": "^1.32.8",
+    "sass-loader": "^10.2.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
