--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "pkg-up": "^3.1.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "17.0.1",
+    "react-click-away-listener": "^2.0.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.1",
     "react-final-form": "^6.5.3",
     "react-focus-on": "^3.5.1",
     "react-imported-component": "^6.4.1",
+    "react-uid": "^2.3.1",
     "sass": "^1.32.8",
     "sass-loader": "^10.2.0",
     "stylelint": "^13.13.1",
