--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
     "use-callback-ref": "^1.2.5",
+    "use-callback-state": "^1.0.0",
     "vercel": "^21.3.3",
     "web3": "^1.3.5",
     "web3-eth-personal": "^1.3.5"
