--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-uid": "^2.3.1",
     "sass": "^1.32.8",
     "sass-loader": "^10.2.0",
+    "storybook-addon-next-router": "^2.0.4",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
