--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@ethersproject/contracts": "^5.2.0",
     "@ethersproject/providers": "^5.1.0",
     "@storybook/preset-scss": "^1.0.3",
+    "@uniswap/default-token-list": "^2.0.0",
+    "@uniswap/token-lists": "^1.0.0-beta.24",
     "@walletconnect/client": "^1.4.1",
     "@walletconnect/qrcode-modal": "^1.4.1",
     "@web3-react/core": "^6.1.9",
