--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "final-form": "^4.20.2",
     "intersection-observer": "^0.12.0",
     "kashe": "^1.0.4",
+    "moment": "^2.29.1",
     "next": "10.0.9",
     "next-images": "^1.8.1",
     "next-videos": "^1.4.0",
