--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export",
     "lint": "eslint src pages --ext .ts,.tsx",
     "lint:fix": "yarn lint -- --fix",
     "lint:styles": "stylelint  \"{pages,src}/**/*.scss\"",
