--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.0",
+    "antd": "^4.16.13",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-storybook-csf-title": "^2.0.0",
     "bn.js": "^5.2.0",
     "classnames": "^2.3.1",
@@ -36,6 +38,7 @@
     "moment": "^2.29.1",
     "next": "10.0.9",
     "next-images": "^1.8.1",
+    "next-plugin-antd-less": "^1.4.2",
     "next-videos": "^1.4.0",
     "patch-package": "^6.4.7",
     "pkg-up": "^3.1.0",
